# JobChecker

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  api.py  docker-compose.yml  pyproject.toml  requirements.txt  run_loop.py
backend/: database.py  main.py  tests.py
backend/agents/: gmail_daemon.py  matcher.py  orchestrator.py  parser.py  scraper.py  submitter.py
backend/db/: vector_store.py
backend/utils/: launch_chrome.py  playwright_helper.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Chatbot.tsx  GlobalProgress.tsx  MemoryInspectorPanel.tsx  ParticleBackground.tsx  PreviewModal.tsx  QueryProvider.tsx  ReachGraph.tsx  Sidebar.tsx  SkillGapChart.tsx
frontend/src/store/: index.ts
frontend_streamlit/: app.py  style.css
linkedin_intel_ext/: background.js  content.js  manifest.json
linkedin_jobs_ext/: background.js  content.js  manifest.json
src/career_tracker/: __init__.py  config.py  main.py
src/career_tracker/agents/: browser_agent.py
src/career_tracker/db/: database.py  schema.sql
src/career_tracker/graph/: edges.py  profile_builder.py  workflow.py
src/career_tracker/llm/: client.py  prompts.py
src/career_tracker/mcp_servers/: __init__.py  database_server.py  filesystem_server.py  gmail_server.py  memory_server.py
src/career_tracker/memory/: __init__.py  embeddings.py  graph_builder.py  store.py
src/career_tracker/models/: __init__.py  application.py  approval.py  email.py  interview.py  profile.py  recruiter.py  state.py
src/career_tracker/services/: __init__.py  approval_service.py  chat_service.py  profile_service.py  settings_service.py
src/career_tracker/utils/: logging.py  (+1 more)
src/tests/: conftest.py
(+26 files in other folders)
