[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "career-tracker"
version = "0.1.0"
description = "Local-first AI Job Application Assistant — Phase 1: Email Intelligence & Recruitment Workflow"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Career Tracker" }]

dependencies = [
    # --- Orchestration ---
    "langgraph>=0.4",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "langchain-mcp-adapters>=0.1",

    # --- MCP ---
    "mcp[cli]>=1.0",

    # --- Data Models & Config ---
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # --- Vector Memory ---
    "chromadb>=0.5",
    "sentence-transformers>=3.0",

    # --- Gmail API ---
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "google-auth-httplib2>=0.2",
    "google-auth-oauthlib>=1.0",

    # --- Database ---
    "aiosqlite>=0.20",

    # --- Logging ---
    "structlog>=24.0",

    # --- Retry ---
    "tenacity>=9.0",

    # --- Environment ---
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
career-tracker = "career_tracker.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/career_tracker"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "src/tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
